✨(refactor): Consolidate BakeryPlugin task registration and configuration
This commit refactors the BakeryPlugin to centralize task registration
and configuration logic. It introduces helper functions in the SiteManager
to improve readability and maintainability.

Key changes include:
- Moving task creation logic into dedicated functions like
  `registerInitSiteTask`, `configureJBakePlugin`, etc.
- Simplifying the `apply` method by calling these new helper functions.
- Improving how the configuration path is handled, including checks
  for Gradle properties.
- Ensuring that tasks are only registered when the configuration file exists.